solutions/multicluster-gateway/manifests/gateway/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  namespace: default
  name: referencegrant-1
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: default
  to:
    - group: multicluster.x-k8s.io
      kind: ServiceImport
