solutions/multicluster-gateway/manifests/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: default
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: multicluster.x-k8s.io
          kind: ServiceImport
          name: nginx-ingress-1-default-backend
          namespace: default
          port: 80
        - group: multicluster.x-k8s.io
          kind: ServiceImport
          name: nginx-ingress-2-default-backend
          namespace: default
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
